syntax = "proto3";

package recommendation;

service RecommendationService {
  rpc GetRecommendations (RecommendationRequest) returns (RecommendationResponse);
}

message RecommendationRequest {
  string userId = 1;
}

message Movie {
  string id = 1;
  string title = 2;
  string genre = 3;
  string director = 4;
}

message RecommendationResponse {
  repeated Movie movies = 1;
}
